--- a/vue/js/index.html
+++ b/vue/js/index.html
@@ -8,20 +8,21 @@
         <div class="outer">
             <div style="width:1250px; " id="app">
                 <button @click="testClick" > Test </button>
-                <StockTable style='width:700px; '  ref="stable" url="http://localhost:8080/lhb?day=20260202" day="2026-02-02"
-                            :columns ="columns" :datas-x ="datas" @dblclick-row="dbRow">
-                </StockTable>
+                <stock-table style='width:700px; '  ref="stable" url="http://localhost:8080/lhb?day=20260202" day="2026-02-02"
+                            :columns ="columns"  @dblclick-row="dbRow">
+                </stock-table>
             </div>
         </div>
     </body>
 
 <script type="module">
-    import {StockTable, PopupWindow} from './ui.js'
+    import {StockTable, registerComponents, PopupWindow} from './ui.js'
+    import {deepCopy} from './utils.js'
     // const { createApp } = Vue;
     var app = Vue.createApp({
         data() {
             let dd = [];
-            for (let i = 0; i < 100; i++) dd.push({code : `code-${i}`, name: 'name-' + i});
+            for (let i = 0; i < 20; i++) dd.push({code : `code-${i}`, name: 'name-' + i});
             let xbRender = function(h, rowData, c) {return rowData.xb + '-K'}
             return {
                 columns: [{key: '_index_', title: '序号', width: 60, style: {'background-color': '#cdcdcd'}},
@@ -32,8 +33,12 @@
         },
         methods: {
             testClick() {
-                console.log('click test button')
-                PopupWindow.create();
+                console.log('click test button');
+                if (! this.div){
+                    let cc = Vue.h(StockTable, {columns: deepCopy(this.columns), datas: deepCopy(this.datas), style: 'width: 100%;'});
+                    this.div = Vue.h('div', {class: 'content', style: 'left: 300px; top: 20px; overflow:auto;width:300px; height: 300px; background-color: #f0f0dd;'}, cc);
+                }
+                let pp = PopupWindow.open(this.div);
             },
             dbRow(rowData, column) {
             },
@@ -42,8 +47,7 @@
             console.log('onmounted:', this.$refs.stable);
         }
     });
-    
-    app.component('stocktable', StockTable);
+    registerComponents(app);
     app.mount('#app');
 </script>
     
