--- a/vue/js/index.html
+++ b/vue/js/index.html
@@ -9,7 +9,7 @@
             <div style="width:1250px; " id="app">
                 <button @click="testClick" > Test </button>
                 <stock-table style='width:700px; '  ref="stable" url="http://localhost:8080/lhb?day=20260202" day="2026-02-02"
-                            :columns ="columns"  @dblclick-row="dbRow">
+                        :datas="datas"    :columns ="columns"  @dblclick-row="dbRow">
                 </stock-table>
             </div>
         </div>
@@ -34,11 +34,9 @@
         methods: {
             testClick() {
                 console.log('click test button');
-                if (! this.div) {
-                    let cc = Vue.h(StockTable, {columns: deepCopy(this.columns), datas: deepCopy(this.datas), style: 'width: 100%;'});
-                    this.div = Vue.h('div', {class: 'content', style: 'left: 300px; top: 20px; overflow:auto;width:300px; height: 300px; background-color: #f0f0dd;'}, cc);
-                }
-                PopupWindow.open(this.div);
+                let cc = Vue.h(StockTable, {columns: deepCopy(this.columns), datas: deepCopy(this.datas), style: 'width: 100%;'});
+                let div = Vue.h('div', {class: 'content', style: 'left: 300px; top: 100px; overflow:auto;width:300px; height: 300px; background-color: #f0f0dd;'}, cc);
+                PopupWindow.open(div);
             },
             dbRow(rowData, column) {
             },
