--- a/vue/js/index.html
+++ b/vue/js/index.html
@@ -8,8 +8,8 @@
         <div class="outer">
             <div style="width:1250px; " id="app">
                 <button @click="testClick" > Test </button>
-                <stock-table style='width:700px; '  ref="stable" url="http://localhost:8080/lhb?day=20260202" day="2026-02-02"
-                        :datas="datas"    :columns ="columns"  @dblclick-row="dbRow">
+                <stock-table style='width:700px; '  ref="stable" :url="url" day="2026-02-02"
+                        :datas="datas"  :columns ="columns"  @dblclick-row="dbRow">
                 </stock-table>
             </div>
         </div>
@@ -18,6 +18,7 @@
 <script type="module">
     import {StockTable, registerComponents, PopupWindow} from './ui.js'
     import {deepCopy} from './utils.js'
+    import config from './config.js'
     // const { createApp } = Vue;
     var app = Vue.createApp({
         data() {
@@ -29,6 +30,7 @@
                             {key: 'code', title: '代码/名称', sortable: true},
                             {key: 'name', title:'名称', sortable: true}],
                 datas: dd,
+                url: `${config.BASE_URL}/lhb?day=20260202`,
             }
         },
         methods: {
